# jura-connect

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  flake.nix  jura-connect-sidecar.spec  pyproject.toml  venv.sh
docs/: PROTOCOL.md
jura_connect/: __init__.py  __main__.py  client.py  commands.py  credentials.py  profile.py  simulator.py
jura_connect/data/: JOE_MACHINES.TXT
jura_connect/data/xml/EF0000/: 3.8.xml
jura_connect/data/xml/EF1096/: 1.9.xml
jura_connect/data/xml/EF1105/: 2.4.xml
jura_connect/data/xml/EF1106/: 4.6.xml
jura_connect/data/xml/EF1115/: 2.0.xml
jura_connect/data/xml/EF1115V2/: 1.1.xml
jura_connect/data/xml/EF1119/: 2.3.xml
jura_connect/data/xml/EF1123/: 3.7.xml
jura_connect/data/xml/EF1125/: 1.0.xml
jura_connect/data/xml/EF1139/: 4.0.xml
jura_connect/data/xml/EF1147/: 1.5.xml
scripts/: brew.sh  common.sh  pair.sh  products.sh
tests/: test_cli.py  test_commands.py  test_credentials.py  test_handshake.py  test_profile.py  test_reads.py
