[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "jura_connect"
version = "0.10.0"
description = "Python WiFi interface for Jura coffee machines (TT237W / S8)"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "jura-connect contributors" }]
dependencies = []

[project.scripts]
jura-connect = "jura_connect.__main__:main"

[tool.setuptools.packages.find]
include = ["jura_connect*"]

[tool.setuptools.package-data]
# The MachineProfile registry loads these on demand to make
# alert names and product codes profile-aware. The bundle is the
# verbatim set of XMLs the J.O.E. APK ships, plus the article-number
# -> EF code map.
jura_connect = ["data/JOE_MACHINES.TXT", "data/xml/*/*.xml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

